--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1", 
+    "start": "ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/GabrielDVpereira/puppeteer-tutorial/issues"
   },
-  "homepage": "https://github.com/GabrielDVpereira/puppeteer-tutorial#readme"
+  "homepage": "https://github.com/GabrielDVpereira/puppeteer-tutorial#readme",
+  "devDependencies": {
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
+  }
 }
